Behavioral, neural analysis changes 14.01.2021

--- a/Schreibtisch/PhD/2_Smith/Analysis/eval_Smith_NeuralData.ipynb
+++ b/Schreibtisch/PhD/2_Smith/Analysis/eval_Smith_NeuralData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "cell_id": "00001-a7d3ab62-8b67-4fe8-8451-4e63dcac57f1",
     "deepnote_cell_type": "code",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "cell_id": "00003-902e7e70-bf96-4f10-b9ac-96e3b1b1e675",
     "deepnote_cell_type": "code",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "cell_id": "00004-b8df616b-8b92-4ea7-b8e7-ac17687e136a",
     "deepnote_cell_type": "code",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "cell_id": "00006-6737344f-0e94-403d-999c-0c08c55abd23",
     "deepnote_cell_type": "code",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "cell_id": "00007-f7a1fe4a-153b-4923-a0d7-073194fe9d6c",
     "deepnote_cell_type": "code",
@@ -426,7 +426,7 @@
        "4  [2.0, 4.0, 15.0, 5.0, 18.0, 17.0, 4.0, 24.0, 0...     CW  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {
     "cell_id": "00012-8860af8b-1249-484c-ad62-05b4b6ad2a20",
     "deepnote_cell_type": "code",
@@ -555,7 +555,7 @@
     "\n",
     "# get mean neuron spikecount vector for each target position, average across trials\n",
     "receptive_fields = []\n",
-    "for k in list(group_Sa.groups):# for all group\n",
+    "for k in list(group_Sa.groups):# for all groups\n",
     "    print(k)\n",
     "    receptive_fields.append(np.mean(group_Sa.get_group(k)['n_cue'].values))"
    ]
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {
     "cell_id": "00014-54e59ebf-0375-4920-b2c7-a5da2fcbb44c",
     "deepnote_cell_type": "code",
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,6 +887,22 @@
     "    bin_sp_trials_pastdelay.append(binned_spikes)\n",
     "\n",
     "bin_sp_complete = np.append(bin_sp_trials,bin_sp_trials_pastdelay, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "borders_full=[]\n",
+    "borders_full = np.append(borders,borders[-1]+borders2['delay_end'][0]-borders2['delay_start'][0])\n",
+    "borders_full = np.append(borders_full,borders_full[-1]+borders2['saccade'][0]-borders2['delay_end'][0])\n",
+    "borders_full = np.append(borders_full,borders_full[-1]+borders2['reward'][0]-borders2['saccade'][0])\n",
+    "borders_full = np.append(borders_full,borders_full[-1]+borders2['trial_end'][0]-borders2['reward'][0])\n",
+    "borders_full = np.append(borders_full,borders_full[-1]+borders2['end'][0]-borders2['trial_end'][0])\n",
+    "\n",
+    "borders_pastdelay = borders_full[len(borders):]"
    ]
   },
   {
@@ -984,22 +1000,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "borders_full=[]\n",
-    "borders_full = np.append(borders,borders[-1]+borders2['delay_end'][0]-borders2['delay_start'][0])\n",
-    "borders_full = np.append(borders_full,borders_full[-1]+borders2['saccade'][0]-borders2['delay_end'][0])\n",
-    "borders_full = np.append(borders_full,borders_full[-1]+borders2['reward'][0]-borders2['saccade'][0])\n",
-    "borders_full = np.append(borders_full,borders_full[-1]+borders2['trial_end'][0]-borders2['reward'][0])\n",
-    "borders_full = np.append(borders_full,borders_full[-1]+borders2['end'][0]-borders2['trial_end'][0])\n",
-    "\n",
-    "borders_pastdelay = borders_full[len(borders):]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -1016,26 +1016,6 @@
    ],
    "source": [
     "borders_pastdelay"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "96"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "max(borders2['end'])"
    ]
   },
   {
@@ -3495,6 +3475,13 @@
     "plt.legend()\n",
     "#plt.savefig('../Figures/Neural/SerialBias/SerialBiasDecodingPrevStim_DelayResponseDecoder_Sa0.png', dpi=100)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CW, CCW analysis"
    ]
   },
   {
