--- a/Schreibtisch/PhD/1_HartHuk/Analysis/eval_HartHuk_NeuralAnalysis.ipynb
+++ b/Schreibtisch/PhD/1_HartHuk/Analysis/eval_HartHuk_NeuralAnalysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "cell_id": "00000-e60b1be8-9e3d-442f-8331-43132b6ec2a1",
     "execution_millis": 815,
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "cell_id": "00002-8bd9f36b-2804-4085-b14a-657c0cc89069",
     "execution_millis": 0,
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {
     "cell_id": "00004-bcd73a71-15c1-4c8b-bec4-aa60b21963e2",
     "execution_millis": 120162,
@@ -260,17 +260,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-90.])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "circdist(2*pi, 0.5*pi)*180/np.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "bins = 1000000# PLEXON bins in microseconds\n",
-    "a=0\n",
+    "empty_trial=[]\n",
+    "spikeMatrix=[]\n",
     "for sess in range(len(spikeClusters)):\n",
+    "    spikeMatrix_trial=[]\n",
     "    for trial_num, trial_start in enumerate(full_time[sess][:-1]): # for each trial, plexon trial starttime\n",
     "        bool_inTrial = (spikeTimes[sess]>trial_start)&(spikeTimes[sess]<full_time[sess][trial_num+1]) # create bool for which spikes are in viewed trial\n",
     "        if np.where(bool_inTrial)[0].shape[0]==0:\n",
-    "            a+=1\n",
+    "            empty_trial.append(trial_num)\n",
     "        else:\n",
     "            time_inTrial = (np.round((spikeTimes[sess][bool_inTrial]-min(spikeTimes[sess][bool_inTrial]))*bins)).astype(int)# align trial start time to 0, create indices\n",
     "            #spikeMatrix_trial = csr_matrix((len(spikeClusters[sess]), max(time_inTrial)+1))# create array (neurons x time bins)\n",
@@ -282,7 +304,18 @@
     "                col_idxNeuron.append(np.ones(len(row_timeNeuron[neuron]), dtype=int)*neuron) # determine columns of sparse matrix (neuron index)\n",
     "                data.append(np.ones(len(row_timeNeuron[neuron]), dtype=int)) # ones to fill spiking matrix\n",
     "            #spikeMatrix_trial[neuron,row_timeNeuron]=1\n",
-    "            spikeMatrix_trial = csr_matrix((np.concatenate(data), (np.concatenate(row_timeNeuron),np.concatenate(col_idxNeuron))))"
+    "            \n",
+    "            spikeMatrix_trial.append(csr_matrix((np.concatenate(data), (np.concatenate(row_timeNeuron),np.concatenate(col_idxNeuron)))))\n",
+    "    spikeMatrix.append(spikeMatrix_trial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spikeMatrix\n"
    ]
   },
   {
